# ciridae-takehome

./: .env.example  .gitignore  DESIGN.md  README.md  ciridae_markup.txt  output_insurance.txt  output_jdr.txt
backend/: .env.example  eval_matching.py  pyproject.toml  test_annotate.py  test_matching.py  test_parse.py
backend/app/: llm.py  main.py  schemas.py
backend/app/pipeline/: annotate.py  matching.py  parse.py  room_mapping.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: hooks.ts  mock.ts  types.ts
frontend/src/components/: Aurora.tsx  Header.tsx  JobStatus.tsx  ResultViewer.tsx  UploadForm.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  collapsible.tsx
